--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     185 418 308 673 355 102 18 333 18 440 0z" />
                     </g>
                 </svg>
-                <p class="vendimiatext subtitle reveal-left">Ubicación Ceremonia</p>
+                <p class="vendimiatext subtitle reveal-left">Ubicación</p>
             </div>
             <div class="toten3a"><a class="b2" href="https://maps.app.goo.gl/W81bQnDJuxnyGh7A6?g_st=aw" target="_blank">¿Cómo
                     llegar?</a>
