--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div id="countdown" class="subtitle reveal-left"></div>
         </section>
         <div class="card">
-            <h1 class="title reveal">Agradecimiento</h1>
+            <h1 class="title reveal" style="margin-left: -15px;">Agradecimiento</h1>
             <p class="reveal-left text">Hoy hace 15 años mis padres daban gracias a
                 Dios por mi y hoy agradezco a Dios por ellos; su cuidado,
                 educación , valores y guia fueron pilares para empezar esta nueva etapa.</p> <br>
