--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
     <div id="content">
         <section class="section">
             <h1 class="title-composed reveal" id="jireh">
-                <div class="line-1">Ines</div>
-                <div class="line-2"><span class="amp">𐦍</span><span class="second-name">Esperanza</span></div>
+                <div class="line-1">Ines Esperanza</div>
             </h1>
             <img src="assets/1v.png" alt="Pareja tomados de la mano" id="lu" class="quote-image fra image-reveal"
                 id="BW" />
