--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div id="content">
         <section class="section">
             <h1 class="title-composed reveal" id="jireh">
-                <div class="line-1">Ines Esperanza</div>
+                <div class="line-1" style="text-align: center;">Ines Esperanza</div>
             </h1>
             <img src="assets/1v.png" alt="Pareja tomados de la mano" id="lu" class="quote-image fra image-reveal"
                 id="BW" />
